--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,4 @@
+<% provide(:title, 'Help') %>
+
 <h1>Help</h1>
 <p>I can get help at <a href="http://www.railstutorial.org/help">the Rails Tutorial help page.</a></p>
