--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Edit user") %>
 <% provide(:button_text, "Save changes") %>
+<% provide(:path, "/users/#{@user.id}") %>
 
 <h1>Update your profile</h1>
 <div class="row">
